  * Fix deprecation warnings for TestCase.failUnlessExists and
    TestCase.failIfExists in bzr 2.4.

  [ Scott Kitterman ]
  * Delete debian/bzr-builddeb.dirs so the long obsolete and empty
    /usr/lib/python2.4/site-packages/bzrlib/plugins/bzr-builddeb/ is no
    longer created. Closes: #631564

  [ Jelmer Vernooij ]
  * Add support for xz and lzma tarballs. LP: #553668

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 13 Jun 2011 23:10:20 +0100

bzr-builddeb (2.7.4) unstable; urgency=low

  [ Jelmer Vernooij ]
  * In 'bzr merge-upstream', don't ignore upstream branch when upstream
    version can not be found.  LP: #772424
  * Automatically determine the version from the tarball name if possible.
    LP: #773199
  * Use --create when merging a new upstream into a branch that doesn't have a
    changelog file. LP: #385667
  * Fix merging of upstream in new packages. LP: #772225

  [ Max Bowsher ]
  * Add python-bzrlib.tests to Build-Depends-Indep.

 -- Max Bowsher <maxb@f2s.com>  Fri, 06 May 2011 00:36:30 +0100

bzr-builddeb (2.7.3) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Avoid opening upstream branch when it is not necessary. LP: #730589
  * Retrieve the upstream branch URL from Launchpad in 'bzr merge-upstream'
    if --launchpad is specified. LP: #726460
  * Fix merge of bz2 upstream tarballs. LP: #737012

  [ Max Bowsher ]
  * Do not error if the top changelog entry is not a recognized Debian or
  Ubuntu upload target.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 18 Apr 2011 23:17:34 +0200

bzr-builddeb (2.7.2) unstable; urgency=high

  [ Andrew Mitchell ]
  * Add upstream/ directory to setup.py. Closes: #618380. LP: #735147

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 14 Mar 2011 23:27:25 +0100

bzr-builddeb (2.7.1) unstable; urgency=low

  * Add Ubuntu oneiric and Debian wheezy to the list of supported
    distributions.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 11 Mar 2011 11:18:52 +0100

bzr-builddeb (2.7) unstable; urgency=low
