@@ -99,7 +99,7 @@ class UpstreamSource(object):
 class AptSource(UpstreamSource):
     """Upstream source that uses apt-source."""
 
-    def fetch_tarballs(self, package, upstream_version, target_dir, 
+    def fetch_tarballs(self, package, upstream_version, target_dir,
             _apt_pkg=None):
         if _apt_pkg is None:
             import apt_pkg
@@ -278,15 +278,14 @@ class UScanSource(UpstreamSource):
                 "--upstream-version=%s" % version,
                 "--force-download", "--rename", "--package=%s" % package,
                 "--check-dirname-level=0",
-                "--download", "--repack", "--destdir=%s" % target_dir,
+                "--download", "--destdir=%s" % target_dir,
                 "--download-version=%s" % version])
         finally:
             os.unlink(tempfilename)
         if r != 0:
             note("uscan could not find the needed tarball.")
             raise PackageVersionNotPresent(package, version, self)
-        # FIXME: What about the other component tarballs?
-        return [self._tarball_path(package, version, None, target_dir)]
+        return gather_orig_files(package, version, target_dir)
 
 
 class SelfSplitSource(UpstreamSource):
@@ -348,6 +347,20 @@ class StackedUpstreamSource(UpstreamSource):
             except NotImplementedError:
                 pass
         return None
+
+
+def gather_orig_files(package, version, path):
+    prefix = "%s_%s.orig" % (package, version)
+    ret = []
+    path = os.path.abspath(path)
+    if not os.path.isdir(path):
+        return None
+    for filename in os.listdir(path):
+        if filename.startswith(prefix):
+            ret.append(os.path.join(path, filename))
+    if ret:
+        return ret
+    return None
 
 
 class UpstreamProvider(object):
@@ -416,24 +429,11 @@ class UpstreamProvider(object):
         return [(p, component_from_orig_tarball(p, self.package, self.version))
                 for p in paths]
 
-    def _gather_orig_files(self, path):
-        prefix = "%s_%s.orig" % (self.package, self.version)
-        ret = []
-        path = os.path.abspath(path)
-        if not os.path.isdir(path):
-            return None
-        for filename in os.listdir(path):
-            if filename.startswith(prefix):
-                ret.append(os.path.join(path, filename))
-        if ret:
-            return ret
-        return None
-
     def already_exists_in_target(self, target_dir):
-        return self._gather_orig_files(target_dir)
+        return gather_orig_files(self.package, self.version, target_dir)
 
     def already_exists_in_store(self):
-        return self._gather_orig_files(self.store_dir)
+        return gather_orig_files(self.package, self.version, self.store_dir)
 
     def provide_from_store_dir(self, target_dir):
         paths = self.already_exists_in_store()
@@ -482,7 +482,8 @@ class TarfileSource(UpstreamSource):
         if version != self.version:
             raise PackageVersionNotPresent(package, version, self)
         dest_name = tarball_name(package, version)
-        repack_tarball(self.path, dest_name, target_dir=target_dir, force_gz=True)
+        repack_tarball(self.path, dest_name, target_dir=target_dir,
+                force_gz=False)
         return [os.path.join(target_dir, dest_name)]
 
     def get_latest_version(self, package, version):
@@ -557,7 +558,7 @@ class LaunchpadReleaseFileSource(UpstreamSource):
             finally:
                 inf.close()
             repack_tarball(tmppath, dest_name, target_dir=target_dir,
-                force_gz=True)
+                force_gz=False)
             return os.path.join(target_dir, dest_name)
         finally:
             shutil.rmtree(tmpdir)
