@@ -23,8 +23,10 @@ bzr-builddeb (2.7.5) UNRELEASED; urgency=low
 
   [ Jelmer Vernooij ]
   * Add support for xz and lzma tarballs. LP: #553668
+  * When importing upstream component tarballs, don't repack bz2/lzma
+    tarballs to gz if the package is in v3 source format. LP: #810531
 
- -- Jelmer Vernooij <jelmer@debian.org>  Mon, 13 Jun 2011 23:10:20 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Fri, 15 Jul 2011 12:15:22 +0200
 
 bzr-builddeb (2.7.4) unstable; urgency=low
 
